spring-boot/src/main/java/com/hotels/example/errors/RoomCapacitySurpassedException.java
package com.hotels.example.errors;

public class RoomCapacitySurpassedException extends  RuntimeException {
    public RoomCapacitySurpassedException(String message){
       super(message);
    }

}
